--- a/src/app/utility/component/details-execution/details-exe-dialog/details-exe-dialog.component.html
+++ b/src/app/utility/component/details-execution/details-exe-dialog/details-exe-dialog.component.html
@@ -28,7 +28,7 @@ limitations under the License.
         <!--
           Title for the execution result details view.
         -->
-        <h1 class="view-title">Execution Result Details</h1>
+        <h1 class="view-title">Execution Result Details : {{execName}}</h1>
         <!--
           Dropdown section for download and refresh buttons.
         -->
@@ -39,6 +39,9 @@ limitations under the License.
           </button>
           <button class="btn btn-sm top-download" matTooltip="Download Reports" (click)="showPopup()">
             <i class="bi bi-cloud-arrow-down-fill extra-icon download"></i>
+          </button>
+          <button class="btn btn-sm top-download page-corner-close-btn" (click)="onClose()" matTooltip="Close">
+           <i class="bi bi-x-lg"></i>
           </button>
         </div>
         <div *ngIf="showPopupFlag" class="popup">
@@ -126,8 +129,14 @@ limitations under the License.
             </div>
   
             <div class="col-md-3">
-              <mat-card class="summary-card">
-                <apx-chart
+              <mat-card class="summary-card position-relative">
+                <!-- Loader Component -->
+                <div class="chart-loader-container" *ngIf="isChartLoading">
+                  <app-loader></app-loader>
+                </div>
+                <!-- Chart Component with visibility toggle -->
+                <div [ngClass]="{'invisible': isChartLoading}">
+                  <apx-chart
                     [series]="chartOptions.series"
                     [chart]="chartOptions.chart"
                     [labels]="chartOptions.labels"
@@ -142,12 +151,18 @@ limitations under the License.
                       data.summary.successPercentage > 70 ? 'green-status' : 
                       'default-class'">{{data.summary.successPercentage}}</span> </span>
                   </div>
+                </div>
               </mat-card>
             </div>
           </div>
           <div class="row mt-3">
-            <div class="anlysis-sec">
-              <mat-tab-group animationDuration="0ms" mat-align-tabs="start" (selectedTabChange)="onTabClick($event)">
+            <div class="anlysis-sec position-relative">
+              <!-- Loader Component -->
+              <div class="analysis-loader-container" *ngIf="isAnalysisLoading">
+                <app-loader></app-loader>
+              </div>
+              <mat-tab-group animationDuration="0ms" mat-align-tabs="start" (selectedTabChange)="onTabClick($event)"
+                [ngClass]="{'invisible': isAnalysisLoading}">
                 <mat-tab label="Result Summary" class="result-label">
                     <div class="report-section">
                       <table class="module-table bold-table">
@@ -274,7 +289,6 @@ limitations under the License.
               <!-- Filtered Execution Section (9/12) -->
               <div
                 class="col-md-9 d-flex align-items-center toolbar-section-filter"
-                *ngIf="data.executionType !== 'SINGLESCRIPT'"
                 >
             
                   <span class="script-head">Filtered Execution :</span>
@@ -444,9 +458,14 @@ limitations under the License.
                                             <div [innerHTML]="parent.formatLogs" class="format-text"></div>
                                           </ng-container>
                                           <ng-container *ngIf="key === 'logs' && parent.status === 'INPROGRESS'">
-                                            <button type="button" class="download-btn log-btn" matTooltip="Live Logs" (click)="liveLogs()">
-                                              View Live Logs
-                                            </button>
+                                            <ng-container *ngIf="parent.status === 'INPROGRESS'">
+                                              <button type="button" class="download-btn log-btn" matTooltip="Live Logs" (click)="liveLogs()">
+                                                View Live Logs
+                                              </button>
+                                            </ng-container>
+                                            <ng-container *ngIf="parent.status === 'PENDING'">
+                                              <span class="text-muted">Execution is yet to start, logs are not available.</span>
+                                            </ng-container>
                                           </ng-container>
                                           <ng-container *ngIf="key !== 'logs'">{{ parent.details[key] }}</ng-container>
                                         </td>
@@ -480,17 +499,8 @@ limitations under the License.
               </div>
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="mt-2 text-end mb-2">
-              <button class="view-btn close" (click)="onClose()">
-                Close
-              </button>
-                <!-- <button class="view-btn close-script" (click)="closeLastExpanded()" *ngIf="expandedIndexes.length > 0">
-                  Close Script Panel
-                </button> -->
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
+  
