--- a/src/app/utility/component/details-execution/details-exe-dialog/details-exe-dialog.component.css
+++ b/src/app/utility/component/details-execution/details-exe-dialog/details-exe-dialog.component.css
@@ -942,13 +942,14 @@ background-color: transparent;
 .top-download{
   background-color: #fff;
   font-size: 0.8rem;
-  padding: 5px 15px;
+  padding: 5px 8px;
   border: none;
   border-radius: 6px;
   font-weight: 500;
   letter-spacing: 0.5px;
   cursor: pointer;
   margin-top: -5px;
+  margin-left: 10px;
   box-shadow: 0px 3px 6px #0000005e;
 }
 
