TDK Version Details page in the UI

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -72,6 +72,7 @@ limitations under the License.
   </button>
   <mat-menu #menu="matMenu">
     <a mat-menu-item routerLink="/change-password" class="menuitem-logout"><mat-icon class="logout-icon">vpn_key</mat-icon><span class="logout-text">Change Password</span></a>
+    <a mat-menu-item routerLink="/system-information" class="menuitem-logout"><mat-icon class="logout-icon">info</mat-icon><span class="logout-text">TDK Version Details</span></a>
     <a mat-menu-item routerLink="/prefered-category" class="menuitem-logout"><mat-icon class="logout-icon">group_add</mat-icon><span class="logout-text">Preferred Category</span></a>
     <button mat-menu-item (click)="logOut()"><mat-icon class="logout-icon">exit_to_app</mat-icon><span class="logout-text">Sign Out</span></button>
   </mat-menu>
