--- a/src/app/pages/rdk-certification/edit-rdk-certification/edit-rdk-certification.component.html
+++ b/src/app/pages/rdk-certification/edit-rdk-certification/edit-rdk-certification.component.html
@@ -57,7 +57,7 @@ limitations under the License.
                             <!-- Row for monaco editor -->
                             <div class="row">
                                 <!-- Container for monaco editor -->
-                                <div style="width: 100%;" class="editor-container">
+                                <div  class="editor-container">
                                 <div class="editor-loader-container" *ngIf="isEditorLoading">
                                     <app-loader></app-loader>
                                 </div>
