--- a/src/app/pages/devices/device-create/device-create.component.css
+++ b/src/app/pages/devices/device-create/device-create.component.css
@@ -429,7 +429,7 @@ h6 {
 
 /* Monaco editor container styles */
 ngx-monaco-editor {
-  height: 400px !important; 
+  height: calc(100vh - 400px) !important;
   min-height: 400px;
   display: block;
   border: 1px solid #ddd;
@@ -447,17 +447,6 @@ ngx-monaco-editor {
   height: 100% !important;
   min-height: 400px !important;
   width: 100% !important;
-}
-
-/* 
-  Styles for the editor container within the device-create component.
-  - Sets the height of the editor to 400px.
-  - Ensures the editor takes up the full available width.
-  - Uses ::ng-deep to apply styles to child components in Angular.
-*/
-::ng-deep .editor-container {
-  height: 400px;
-  width: 100%;
 }
 
 /* 
