--- a/src/app/pages/rdk-certification/create-rdk-certification/create-rdk-certification.component.css
+++ b/src/app/pages/rdk-certification/create-rdk-certification/create-rdk-certification.component.css
@@ -73,10 +73,12 @@ http://www.apache.org/licenses/LICENSE-2.0
 
 /* Add this new class for the editor container */
 .editor-container {
+  height: calc(100vh - 300px);
   width: 100%;
-  margin: 0;
-  padding: 0;
-   height: 60vh;
+  position: relative;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 /* Ensure monaco editor takes full width */
