Add All option for combined report

--- a/src/app/pages/analysis/analysis.component.html
+++ b/src/app/pages/analysis/analysis.component.html
@@ -184,6 +184,7 @@ limitations under the License.
                                             <select class="form-select" aria-label="Default select example" id="selectDevicetype"
                                                 formControlName="executionType" (change)="changeExecutionType($event)" >
                                                 <option value="" default>Select</option>
+                                                <option value="ALL">All</option>
                                                 <option value="SINGLESCRIPT">Single Script</option>
                                                 <option value="MULTISCRIPT">Multi Script</option>
                                                 <option value="TESTSUITE">TestSuite</option>
